docs/0.14/_sources/api/gammapy.modeling.Parameter.rst.txt
Parameter
=========

.. currentmodule:: gammapy.modeling

.. autoclass:: Parameter
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Parameter.factor
      ~Parameter.factor_max
      ~Parameter.factor_min
      ~Parameter.frozen
      ~Parameter.max
      ~Parameter.min
      ~Parameter.name
      ~Parameter.quantity
      ~Parameter.scale
      ~Parameter.unit
      ~Parameter.value

   .. rubric:: Methods Summary

   .. autosummary::

      ~Parameter.autoscale
      ~Parameter.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: factor
   .. autoattribute:: factor_max
   .. autoattribute:: factor_min
   .. autoattribute:: frozen
   .. autoattribute:: max
   .. autoattribute:: min
   .. autoattribute:: name
   .. autoattribute:: quantity
   .. autoattribute:: scale
   .. autoattribute:: unit
   .. autoattribute:: value

   .. rubric:: Methods Documentation

   .. automethod:: autoscale
   .. automethod:: to_dict
